# auto_tms

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
auto_tms/: cli.py  config.py  llm.py  progress.py
auto_tms/auth/: browser.py  captcha.py  login.py  session.py
auto_tms/engine/: course.py
auto_tms/engine/handlers/: document.py  exam.py  survey.py  video.py
auto_tms/planner/: pending.py  scraper.py  shortfall.py
auto_tms/state/: models.py  store.py
gui/: api.py  app.py
gui/frontend/: app.js  index.html  style.css
scripts/: config.sh
