[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_tms"
version = "0.1.0"
description = "教育訓練系統自動化測試工具"
authors = [{name = "Yen-Ju Chu", email = "mantour.tw@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "click>=8.1",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
ocr = ["ddddocr"]
gui = ["fastapi>=0.110", "uvicorn>=0.27", "pywebview>=5.0", "websockets>=12.0"]
all = ["anthropic>=0.40", "openai>=1.0", "ddddocr", "fastapi>=0.110", "uvicorn>=0.27", "pywebview>=5.0", "websockets>=12.0"]

[project.scripts]
auto_tms = "auto_tms.cli:cli"
auto_tms_gui = "gui.app:main"

[tool.setuptools.packages.find]
include = ["auto_tms*", "gui*"]
